[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/CloudsControl/CloudsControl.gd" type="Script" id=1]

[node name="CloudsControl" type="Node2D"]
script = ExtResource( 1 )

[node name="CloudsYSort" type="YSort" parent="."]

[node name="WestGenerationArea" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 1248, 640, 1280, 640, 1280, 1696, 1248, 1696 )

[node name="EastGenerationArea" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 2848, 1696, 2880, 1696, 2880, 640, 2848, 640 )

[node name="NorthGenerationArea" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 1536, 128, 2656, 128, 2656, 160, 1536, 160 )

[node name="SoutGenerationArea" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 1536, 2144, 2656, 2144, 2656, 2176, 1536, 2176 )

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
